# liquid-chain-ai

./: .gitignore  .pre-commit-config.yaml  README.md
examples/audio-transcription-cli/: README.md  download_audio_samples.py  pyproject.toml
examples/audio-transcription-cli/src/audio_transcription_cli/: __init__.py  audio_playback.py  audio_preprocessing.py  auto_download.py  config.py  model_wrapper.py  platform_utils.py  raw_transcript_logger.py  text_cleaner.py  transcribe.py
examples/audio-webgpu-demo/: README.md
examples/flight-search-assistant/: README.md
examples/invoice-parser/: CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
examples/invoice-parser/src/invoice_parser/: invoice_file_handler.py  invoice_processor.py  llama_server.py  main.py  table_printer.py
examples/invoice-reader/: Makefile  README.md  pyproject.toml
examples/invoice-reader/output/: bills.csv
examples/invoice-reader/src/invoice_parser/: __init__.py  invoice_file_handler.py  invoice_processor.py  main.py
examples/lfm2-english-to-korean/: README.md  main.py
examples/vl-webgpu-demo/: README.md
finetuning/: README.md  clean_notebooks.sh  grpo_for_verifiable_tasks.ipynb  remove_widget_metadata.py  sft_for_vision_language_model.ipynb
finetuning/notebooks/: grpo_for_verifiable_tasks.ipynb  sft_for_vision_language_model.ipynb
